# logos-yolo

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  flake.nix  manifest.json  metadata.json  module.yaml  result  ui_metadata.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
build-ui/: CMakeCache.txt  Makefile  cmake_install.cmake
build-ui/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-ui/yolo_ui_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-ui/yolo_ui_autogen/CCBC4FUR7J/: qrc_qml.cpp
build-ui/yolo_ui_autogen/UVLADIE3JM/: moc_yolo_board.cpp  moc_yolo_board.cpp.d  moc_yolo_ui_component.cpp  moc_yolo_ui_component.cpp.d
docs/: BASECAMP-LOADING.md
examples/: WALKTHROUGH.md  demo-post.sh  multi-admin-demo.sh
qml/: BoardList.qml  BoardView.qml  CreatePost.qml  EventLog.qml  MainView.qml  main.qml  qml.qrc  yolo_ui.qrc
scripts/: CMakeLists.txt  DemoView.qml  bundle-lgx.sh  screenshot_capture.cpp
src/: metadata.json  yolo.cpp  yolo.h  yolo_board.cpp  yolo_board.h  yolo_interface.h  yolo_plugin.cpp  yolo_plugin.h  yolo_ui_component.cpp  yolo_ui_component.h
tests/: e2e_logos_probe.cpp  e2e_real_logos.sh  logos_api_client.h  run_integration.sh  test_integration.cpp  test_verify_onchain.cpp  test_yolo_board.cpp  test_yolo_event_lifecycle.cpp  test_yolo_events.cpp  test_yolo_federation.cpp  verify_onchain.sh
